# vibe-audit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
vibe_audit/: ai_analyzer.py  cli.py  models.py
vibe_audit/hooks/: installer.py
vibe_audit/report/: dashboard.py
vibe_audit/scanner/: __init__.py  _utils.py  auth.py  deps.py  dotenv_check.py  frontend.py  headers.py  injection.py  logging_check.py  ratelimit.py  secrets.py
