[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-audit"
version = "0.1.0"
description = "Security scanner and dashboard for vibe-coded apps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pip-audit>=2.0.0",
]

[project.scripts]
vibe-audit = "vibe_audit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vibe_audit*"]
